WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239084
[iOS] Ignore find interaction deprecation warnings
https://bugs.webkit.org/show_bug.cgi?id=239084
Summary
[iOS] Ignore find interaction deprecation warnings
Aditya Keerthi
Reported
2022-04-11 12:01:24 PDT
...
Attachments
[fast-cq] Patch
(1.45 KB, patch)
2022-04-11 12:06 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
[fast-cq] Patch
(1.41 KB, patch)
2022-04-11 13:28 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-04-11 12:06:18 PDT
Created
attachment 457276
[details]
[fast-cq] Patch
EWS
Comment 2
2022-04-11 13:20:39 PDT
ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!.
Aditya Keerthi
Comment 3
2022-04-11 13:28:18 PDT
Created
attachment 457281
[details]
[fast-cq] Patch
EWS
Comment 4
2022-04-11 14:46:42 PDT
Committed
r292726
(
249511@main
): <
https://commits.webkit.org/249511@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457281
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-04-11 14:47:16 PDT
<
rdar://problem/91590145
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug