[iOS] Ignore find interaction deprecation warnings https://bugs.webkit.org/show_bug.cgi?id=239084

Unreviewed, build fix.


* UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _setFindInteractionEnabled:]):

Canonical link: https://commits.webkit.org/249511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292726 268f45cc-cd09-0410-ab3c-d52691b4dbfc